--- a/index.html
+++ b/index.html
@@ -7,12 +7,11 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <meta http-equiv="X-UA-Compatible" content="ie=edge">
         <link rel="stylesheet"href="style.css">
-        <title>Document</title>
+        <title>LapPl4ND</title>
     </head>
 
     <body>
-        <h1>Title</h1>
-        <p>Test</p>
+        <center><h1>Development in progress</h1></center>
     </body>
 
 </html>
