--- a/index.html
+++ b/index.html
@@ -4,10 +4,28 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Lappl4nd</title>
+    <link rel="icon" type="image/jpg" href="img/webicon.jpg">
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
+
     <div class="content">
+        <script src="script.js"></script>
+        <video autoplay loop muted playsinline id="bg-video">
+            <source src="img/Background.mp4" type="video/mp4">
+        </video>
+
+        <button id="mute-button">🔈</button>
     </div>
+
+    <div class="pp">
+
+    </div>
+
+    <div class="rectangle">
+        <p class="pseudo">LapPl4ND</p>
+    </div>
+
 </body>
-</html>
+
+</html> 
