--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <div class="content">
         <script src="script.js"></script>
         <video autoplay loop muted playsinline id="bg-video">
-            <source src="https://raw.githubusercontent.com/LapPl4ND/LapPl4ND.github.io/main/img/Background.gif" type="gif">
+            <source src="https://raw.githubusercontent.com/LapPl4ND/LapPl4ND.github.io/main/img/Background.mp4" type="video/mp4">
         </video>
 
         <button id="mute-button">🔈</button>
