--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Lappl4nd</title>
-    <link rel="icon" type="image/jpg" href="https://raw.githubusercontent.com/LapPl4ND/LapPl4ND.github.io/main/img/webicon.jpg">
+    <link rel="icon" type="image/jpg" href="img/webicon.jpg">
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
@@ -12,19 +12,59 @@
     <div class="content">
         <script src="script.js"></script>
         <video autoplay loop muted playsinline id="bg-video">
-            <source src="https://raw.githubusercontent.com/LapPl4ND/LapPl4ND.github.io/main/img/Background.mp4" type="video/mp4">
+            <source src="img/Background.mp4" type="video/mp4">
         </video>
 
         <button id="mute-button">🔈</button>
     </div>
 
-    <div class="pp">
-
-    </div>
+    <div class="pp"></div>
 
     <div class="rectangle">
+
         <p class="pseudo">LapPl4ND</p>
+
+
+        <a href="https://www.unknowncheats.me/forum/other-mmorpg-and-strategy/620147-menu-snobreak.html"
+           class="Projet1">
+            <p class="Titre">Menu Snowbreak</p>
+        </a>
+
+        <a href="https://www.unknowncheats.me/forum/other-fps-games/691467-fragpunk-aimcolor.html"
+           class="Projet2">
+            <p class="Titre">Color Aim</p>
+        </a>
+
+        <a href="https://github.com/LapPl4ND/MenuCE/releases/download/CE/Menu.SnowBreak.CT"
+           download="MenuCE"
+           class="CE">
+            <p class="Titre">Menu CE</p>
+        </a>
+
+        <a href="https://github.com/LapPl4ND/Menu-SnowBreak-DLL/releases/download/Dll/Menu.SnowBreak.dll"
+           download="MenuDLL"
+           class="DLL">
+            <p class="Titre">Menu DLL</p>
+        </a>
+
+
+        <a href="https://github.com/LapPl4ND/Color-Aim/releases/download/AimColor/AimColor.zip"
+           download="AimColor"
+           class="Aim">
+            <p class="Titre">Aim Color</p>
+        </a>
+
+        <a href="https://discord.gg/utq53uhmBE" target="_blank" class="Discord"></a>
+
+        <a href="https://www.youtube.com/@Ahegao_" target="_blank" class="YT"></a>
+
+        <a href="https://x.com/L4ppland_F" target="_blank" class="X"></a>
+
+        <a href="https://github.com/LapPl4ND" target="_blank" class="GH"></a>
+
     </div>
+
+    
 
 </body>
 
