--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Lappl4nd</title>
-    <link rel="icon" type="image/jpg" href="img/webicon.jpg">
+    <link rel="icon" type="image/jpg" href="https://raw.githubusercontent.com/LapPl4ND/LapPl4ND.github.io/main/img/webicon.jpg">
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
@@ -12,7 +12,7 @@
     <div class="content">
         <script src="script.js"></script>
         <video autoplay loop muted playsinline id="bg-video">
-            <source src="img/Background.mp4" type="video/mp4">
+            <source src="https://raw.githubusercontent.com/LapPl4ND/LapPl4ND.github.io/main/img/Background.mp4" type="video/mp4">
         </video>
 
         <button id="mute-button">🔈</button>
@@ -62,9 +62,7 @@
 
         <a href="https://github.com/LapPl4ND" target="_blank" class="GH"></a>
 
-    </div>
-
-    
+    </div>   
 
 </body>
 
