--- a/index.html
+++ b/index.html
@@ -15,7 +15,16 @@
             <source src="https://raw.githubusercontent.com/LapPl4ND/LapPl4ND.github.io/main/img/Background.mp4" type="video/mp4">
         </video>
 
-        <button id="mute-button">🔈</button>
+        <audio id="bg-music" loop>
+            <source src="https://raw.githubusercontent.com/LapPl4ND/LapPl4ND.github.io/main/song/MusicF.mp3" type="audio/mp3">
+        </audio>
+
+<div id="mute-container">
+    <button id="mute-button">🔈</button>
+    <input type="range" id="volume-slider" min="0" max="1" step="0.1" value="1">
+</div>
+
+        
     </div>
 
     <div class="rectangle">
