--- a/index.html
+++ b/index.html
@@ -4,27 +4,27 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Lappl4nd</title>
-    <link rel="icon" type="image/jpg" href="https://raw.githubusercontent.com/LapPl4ND/LapPl4ND.github.io/main/img/webicon.jpg">
+    <link rel="icon" type="image/jpg" href="img/webicon.jpg">
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
 
-<div class="content">
-    <script src="script.js"></script>
-    <video autoplay loop muted playsinline id="bg-video">
-        <source src="https://raw.githubusercontent.com/LapPl4ND/LapPl4ND.github.io/main/img/Background.mp4" type="video/mp4">
-    </video>
+    <div class="content">
+        <script src="script.js"></script>
+        <video autoplay loop muted playsinline id="bg-video">
+            <source src="img/Background.mp4" type="video/mp4">
+        </video>
 
-    <audio id="bg-music" loop>
-        <source src="https://raw.githubusercontent.com/LapPl4ND/LapPl4ND.github.io/main/song/MusicF.mp3" type="audio/mp3">
-    </audio>
+        <audio id="bg-music" loop>
+            <source src="song/MusicF.mp3" type="audio/mp3">
+        </audio>
 
-    <div id="mute-container">
-        <button id="mute-button">🔈</button>
-        <input type="range" id="volume-slider" min="0" max="1" step="0.1" value="1">
+        <div id="mute-container">
+            <button id="mute-button">🔈</button>
+            <input type="range" id="volume-slider" min="0" max="1" step="0.1" value="1">
+        </div>
+
     </div>
-
-</div>
 
     <div class="rectangle">
 
@@ -70,7 +70,9 @@
 
         <a href="https://github.com/LapPl4ND" target="_blank" class="GH"></a>
 
-    </div>   
+    </div>
+
+    
 
 </body>
 
