--- a/index.html
+++ b/index.html
@@ -34,33 +34,35 @@
 
 
         <a href="https://www.unknowncheats.me/forum/other-mmorpg-and-strategy/620147-menu-snobreak.html"
-           class="Projet1">
-            <p class="Titre">Menu Snowbreak</p>
-        </a>
+   class="Projet1">
+    <p class="Titre">
+        <span class="menu-text">Menu</span>
+        Snowbreak
+    </p>
+</a>
 
-        <a href="https://www.unknowncheats.me/forum/other-fps-games/691467-fragpunk-aimcolor.html"
-           class="Projet2">
-            <p class="Titre">Color Aim</p>
-        </a>
+<a href="https://www.unknowncheats.me/forum/other-fps-games/691467-fragpunk-aimcolor.html"
+   class="Projet2">
+    <p class="Titre">Color Aim</p>
+</a>
 
-        <a href="https://github.com/LapPl4ND/MenuCE/releases/download/CE/Menu.SnowBreak.CT"
-           download="MenuCE"
-           class="CE">
-            <p class="Titre">Menu CE</p>
-        </a>
+<a href="https://github.com/LapPl4ND/MenuCE/releases/download/CE/Menu.SnowBreak.CT"
+   download="MenuCE"
+   class="CE">
+    <p class="Titre"><span class="menu-text">Menu</span> CE</p>
+</a>
 
-        <a href="https://github.com/LapPl4ND/Menu-SnowBreak-DLL/releases/download/Dll/Menu.SnowBreak.dll"
-           download="MenuDLL"
-           class="DLL">
-            <p class="Titre">Menu DLL</p>
-        </a>
+<a href="https://github.com/LapPl4ND/Menu-SnowBreak-DLL/releases/download/Dll/Menu.SnowBreak.dll"
+   download="MenuDLL"
+   class="DLL">
+    <p class="Titre"><span class="menu-text">Menu</span> DLL</p>
+</a>
 
-
-        <a href="https://github.com/LapPl4ND/Color-Aim/releases/download/AimColor/AimColor.zip"
-           download="AimColor"
-           class="Aim">
-            <p class="Titre">Aim Color</p>
-        </a>
+<a href="https://github.com/LapPl4ND/Color-Aim/releases/download/AimColor/AimColor.zip"
+   download="AimColor"
+   class="Aim">
+    <p class="Titre">Aim <span class="color-text">Color</span></p>
+</a>
 
         <a href="https://discord.gg/utq53uhmBE" target="_blank" class="Discord"></a>
 
