--- a/index.html
+++ b/index.html
@@ -5,77 +5,211 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Lappl4nd</title>
     <link rel="icon" type="image/jpg" href="https://raw.githubusercontent.com/LapPl4ND/LapPl4ND.github.io/main/img/webicon.jpg">
-    <link rel="stylesheet" href="style.css">
-</head>
-<body>
+     <!-- https:// raw.githubusercontent.com/LapPl4ND/LapPl4ND.github.io/main/img/webicon.jpg -->
+        <link rel="stylesheet" href="style.css">
+    </head>
 
-    <div class="content">
-        <script src="script.js"></script>
-        <video autoplay loop muted playsinline id="bg-video">
-            <source src="https://raw.githubusercontent.com/LapPl4ND/LapPl4ND.github.io/main/img/Background.mp4" type="video/mp4">
-        </video>
+    <body class="page2">
 
-        <audio id="bg-music" loop>
-            <source src="https://raw.githubusercontent.com/LapPl4ND/LapPl4ND.github.io/main/song/MusicF.mp3" type="audio/mp3">
-        </audio>
+        <div class="content">
+            <script src="script.js"></script>
+            <video autoplay loop muted playsinline id="bg-video">
+                <source src="https://raw.githubusercontent.com/LapPl4ND/LapPl4ND.github.io/main/img/Background.mp4" type="video/mp4">
+                <!-- https:// raw.githubusercontent.com/LapPl4ND/LapPl4ND.github.io/main/img/Background.mp4 -->
+            </video>
 
-        <div id="mute-container">
-            <button id="mute-button">🔈</button>
-            <input type="range" id="volume-slider" min="0" max="1" step="0.1" value="1">
+            <audio id="bg-music" loop autoplay>
+                <source src="https://raw.githubusercontent.com/LapPl4ND/LapPl4ND.github.io/main/song/MusicF2.mp3" type="audio/mp3">
+                <!-- https:// raw.githubusercontent.com/LapPl4ND/LapPl4ND.github.io/main/song/MusicF2.mp3 -->
+            </audio>
+
+            <div id="mute-container">
+                <button id="mute-button">🔈</button>
+                <input type="range" id="volume-slider" min="0" max="1" step="0.1" value="1">
+            </div>
+
+            <a href="page2.html" class="DashboardPg1">▶️​​</a>
+            <a href="page3.html" class="LoginPg1">◀️​</a>
+
         </div>
 
-    </div>
+        <div class="rectangle2">
 
-    <div class="rectangle">
+            <div class="pp2"></div>
 
-        <div class="pp"></div>
+            <div class="rectangleInt">
 
-        <p class="pseudo">LapPl4ND</p>
+                <p class="pseudo2">LapPl4ND</p>
+
+                <p class="Bio">Designer, Dev & Net/Cyb</p>
+
+                <div class="separation"></div>
+
+                <p class="Titre1">Pass</p>
+
+                <p class="Test1">- New Technologies</p>
+
+                <p class="Test2">- Japanese Culture</p>
+
+                <p class="Titre2">Connect</p>
+
+                <a href="https://github.com/LapPl4ND" class="GitHub-button" target="_blank">
+                    <i class="fab fa-github"></i> GitHub
+                </a>
+
+                <a href="https://www.youtube.com/@Ahegao_" class="Youtube-button" target="_blank">
+                    <i class="fab fa-youtube"></i> YouTube
+                </a>
+
+                <a href="https://www.unknowncheats.me/forum/other-mmorpg-and-strategy/620147-menu-snobreak.html" class="UC-button" target="_blank">
+                    <i class="fab fa-UC"></i> UnckowCheat
+                </a>
 
 
-        <a href="https://www.unknowncheats.me/forum/other-mmorpg-and-strategy/620147-menu-snobreak.html"
-   class="Projet1">
-    <p class="Titre">
-        <span class="menu-text">Menu</span>
-        Snowbreak
-    </p>
-</a>
 
-<a href="https://www.unknowncheats.me/forum/other-fps-games/691467-fragpunk-aimcolor.html"
-   class="Projet2">
-    <p class="Titre">Color Aim</p>
-</a>
+            </div>
 
-<a href="https://github.com/LapPl4ND/MenuCE/releases/download/CE/Menu.SnowBreak.CT"
-   download="MenuCE"
-   class="CE">
-    <p class="Titre"><span class="menu-text">Menu</span> CE</p>
-</a>
+            <div class="rectangleInt2">
 
-<a href="https://github.com/LapPl4ND/Menu-SnowBreak-DLL/releases/download/Dll/Menu.SnowBreak.dll"
-   download="MenuDLL"
-   class="DLL">
-    <p class="Titre"><span class="menu-text">Menu</span> DLL</p>
-</a>
+                <p class="Skill">Skills</p>
 
-<a href="https://github.com/LapPl4ND/Color-Aim/releases/download/AimColor/AimColor.zip"
-   download="AimColor"
-   class="Aim">
-    <p class="Titre">Aim <span class="color-text">Color</span></p>
-</a>
+                <div class="separation2"></div>
 
-        <a href="https://discord.gg/utq53uhmBE" target="_blank" class="Discord"></a>
+                <div class="skills-container">
 
-        <a href="https://www.youtube.com/@Ahegao_" target="_blank" class="YT"></a>
+                    <div class="skill-bar">
 
-        <a href="https://x.com/L4ppland_F" target="_blank" class="X"></a>
+                        <div class="skill-title">Html</div>
+                        <div class="skill-level" style="width: 70%;"></div>
 
-        <a href="https://github.com/LapPl4ND" target="_blank" class="GH"></a>
+                    </div>
 
-    </div>
+                    <div class="skill-bar">
 
-    
+                        <div class="skill-title">Css</div>
+                        <div class="skill-level" style="width: 70%;"></div>
 
-</body>
 
-</html> 
+                    </div>
+
+                    <div class="skill-bar">
+
+                        <div class="skill-title">JavaScript</div>
+                        <div class="skill-level" style="width: 50%;"></div>
+
+
+                    </div>
+
+                    <div class="skill-bar">
+
+                        <div class="skill-title">C++</div>
+                        <div class="skill-level" style="width: 60%;"></div>
+
+
+                    </div>
+
+                    <div class="skill-bar">
+
+                        <div class="skill-title">SCCM</div>
+                        <div class="skill-level" style="width: 80%;"></div>
+
+
+                    </div>
+
+                    <div class="skill-bar">
+
+                        <div class="skill-title">MDT</div>
+                        <div class="skill-level" style="width: 80%;"></div>
+
+
+                    </div>
+
+                    <div class="skill-bar">
+
+                        <div class="skill-title">GPO</div>
+                        <div class="skill-level" style="width: 80%;"></div>
+
+
+                    </div>
+
+                    <div class="skill-bar">
+
+                        <div class="skill-title">PowerShell</div>
+                        <div class="skill-level" style="width: 60%;"></div>
+
+
+                    </div>
+
+                    <div class="skill-bar">
+
+                        <div class="skill-title">Python</div>
+                        <div class="skill-level" style="width: 50%;"></div>
+
+
+                    </div>
+
+                    <div class="skill-bar">
+
+                        <div class="skill-title">Linux</div>
+                        <div class="skill-level" style="width: 60%;"></div>
+
+
+                    </div>
+
+                    <div class="skill-bar">
+
+                        <div class="skill-title">Windows</div>
+                        <div class="skill-level" style="width: 90%;"></div>
+
+
+                    </div>
+
+                    <div class="skill-bar">
+
+                        <div class="skill-title">Cyb</div>
+                        <div class="skill-level" style="width: 50%;"></div>
+
+
+                    </div>
+
+                    <div class="skill-bar">
+
+                        <div class="skill-title">IP</div>
+                        <div class="skill-level" style="width: 80%;"></div>
+
+
+                    </div>
+
+                    <div class="skill-bar">
+
+                        <div class="skill-title">VLAN</div>
+                        <div class="skill-level" style="width: 80%;"></div>
+
+
+                    </div>
+
+                    <div class="skill-bar">
+
+                        <div class="skill-title">FW</div>
+                        <div class="skill-level" style="width: 70%;"></div>
+
+
+                    </div>
+
+
+                </div>
+
+                <div class="rectangleInt3">
+
+                    <p class="Information">Information</p>
+
+                    <div class="separation2"></div>
+
+                </div>
+
+
+
+            </div>
+
+    </body>
+    </html>
