--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
             <script src="script.js"></script>
             <video autoplay loop muted playsinline id="bg-video">
                 <source src="https://raw.githubusercontent.com/LapPl4ND/LapPl4ND.github.io/main/img/Background2.mp4" type="video/mp4">
-                <!-- https:// raw.githubusercontent.com/LapPl4ND/LapPl4ND.github.io/main/img/Background.mp4 -->
+                <!-- https:// raw.githubusercontent.com/LapPl4ND/LapPl4ND.github.io/main/img/Background2.mp4 -->
             </video>
 
             <audio id="bg-music" loop autoplay>
