--- a/index.html
+++ b/index.html
@@ -20,7 +20,8 @@
 
             <audio id="bg-music" loop autoplay>
                 <source src="https://raw.githubusercontent.com/LapPl4ND/LapPl4ND.github.io/main/song/MusicF2.mp3" type="audio/mp3">
-                <!-- https:// raw.githubusercontent.com/LapPl4ND/LapPl4ND.github.io/main/song/MusicF2.mp3 -->
+                <!-- song by OPPXI -->
+                <!-- https:// raw.githubusercontent.com/LapPl4ND/LapPl4ND.github.io/main/song/MusicF2.mp3 
             </audio>
 
             <div id="mute-container">
