--- a/page2.html
+++ b/page2.html
@@ -20,6 +20,7 @@
 
         <audio id="bg-music" loop autoplay>
             <source src="song/MusicF.mp3" type="audio/mp3">
+            <!-- song by OPPXI -->
             <!-- https:// raw.githubusercontent.com/LapPl4ND/LapPl4ND.github.io/main/song/MusicF.mp3 -->
         </audio>
 
